[gd_scene load_steps=2 format=3 uid="uid://di4dq2uoi01tu"]

[ext_resource type="Script" uid="uid://dea1y2any3dmk" path="res://components/audit/audit_dashboard.gd" id="1_g4tys"]

[node name="AuditDashboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g4tys")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02745098, 0.078431375, 0.05490196, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="MainLayout" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ConfigPanel" type="VBoxContainer" parent="MarginContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="MarginContainer/MainLayout/ConfigPanel"]
layout_mode = 2
text = "Input Settings"

[node name="TargetColSelect" type="OptionButton" parent="MarginContainer/MainLayout/ConfigPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="TabContainer" type="TabContainer" parent="MarginContainer/MainLayout/ConfigPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/side_margin = 0
theme_override_font_sizes/font_size = 20
current_tab = 0

[node name="Refusals" type="MarginContainer" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Refusals"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="RefusalTitle" type="Label" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Refusals/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Refusal Check"

[node name="LimitBox" type="HBoxContainer" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Refusals/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Refusals/VBoxContainer/LimitBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Scan first N characters"

[node name="RefusalLimit" type="SpinBox" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Refusals/VBoxContainer/LimitBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Refusals/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Phrases (One per line)"

[node name="RefusalEdit" type="TextEdit" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Refusals/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="Preface" type="MarginContainer" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Preface"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PrefaceTitle" type="Label" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Preface/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Preface Check"

[node name="LimitBox" type="HBoxContainer" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Preface/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Preface/VBoxContainer/LimitBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Scan first N characters"

[node name="PrefaceLimit" type="SpinBox" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Preface/VBoxContainer/LimitBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Preface/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Phrases (One per line)"

[node name="PrefaceEdit" type="TextEdit" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Preface/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="Postface" type="MarginContainer" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Postface"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PostfaceTitle" type="Label" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Postface/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Postface Check"

[node name="LimitBox" type="HBoxContainer" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Postface/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Postface/VBoxContainer/LimitBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Scan first N characters"

[node name="PostfaceLimit" type="SpinBox" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Postface/VBoxContainer/LimitBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Postface/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Phrases (One per line)"

[node name="PostfaceEdit" type="TextEdit" parent="MarginContainer/MainLayout/ConfigPanel/TabContainer/Postface/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MainLayout/ConfigPanel"]
layout_mode = 2

[node name="ScanBtn" type="Button" parent="MarginContainer/MainLayout/ConfigPanel/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Run Audit"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/MainLayout"]
layout_mode = 2

[node name="ResultsPanel" type="VBoxContainer" parent="MarginContainer/MainLayout"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Header" type="HBoxContainer" parent="MarginContainer/MainLayout/ResultsPanel"]
layout_mode = 2

[node name="ResultsLabel" type="Label" parent="MarginContainer/MainLayout/ResultsPanel/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Results"

[node name="MiddleExpandSpacer" type="Control" parent="MarginContainer/MainLayout/ResultsPanel/Header"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="ClearBtn" type="Button" parent="MarginContainer/MainLayout/ResultsPanel/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Clear Results"

[node name="CloseBtn" type="Button" parent="MarginContainer/MainLayout/ResultsPanel/Header"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Minimize"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainLayout/ResultsPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultList" type="VBoxContainer" parent="MarginContainer/MainLayout/ResultsPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
